--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/customer/customerhistory.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/customer/customerhistory.xhtml
@@ -5,6 +5,10 @@
                 xmlns:a4j="http://richfaces.org/a4j"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:rich="http://richfaces.org/rich" template="/template/powerstaff.xhtml">
+    <ui:define name="pagetitle">
+        <h:outputText
+                value="Historie #{customerBackingBean.data.entity.name1} #{customerBackingBean.data.entity.name2}"/>
+    </ui:define>
     <ui:define name="mainmenu">
         <ui:include src="/include/mainmenu.xhtml"/>
     </ui:define>
@@ -12,98 +16,96 @@
         <ui:include src="/include/customer/customermenu2.xhtml"/>
     </ui:define>
     <ui:define name="content">
-        <b:title title="Kunden - Kontakthistorie"/>
-        <f:subview id="customer_contacthistory">
-            <b:gridBagLayout rows="p,10" cols="200,p">
-                <b:cell y="1" x="1">
-                    <h:outputText styleClass="title" value="Kunden Kontakthistorie"/>
-                </b:cell>
+        <b:gridBagLayout rows="p,10" cols="200,p">
+            <b:cell y="1" x="1">
+                <h:outputText styleClass="title" value="Kunden Kontakthistorie"/>
+            </b:cell>
 
-                <b:cell y="1" x="2">
-                    <a4j:status>
-                        <f:facet name="start">
-                            <img src="${facesContext.externalContext.requestContextPath}/images/rotate2.gif" width="20" height="20"/>
-                        </f:facet>
-                    </a4j:status>
-                </b:cell>
-            </b:gridBagLayout>
+            <b:cell y="1" x="2">
+                <a4j:status>
+                    <f:facet name="start">
+                        <img src="${facesContext.externalContext.requestContextPath}/images/rotate2.gif" width="20"
+                             height="20"/>
+                    </f:facet>
+                </a4j:status>
+            </b:cell>
+        </b:gridBagLayout>
 
-            <b:gridBagLayout cols="810" rows="10,p,1,p,p" id="menu">
-                <b:cell x="1" y="1">
-                    <b:titledBox label="Neuen Eintrag erfassen" id="input">
-                        <b:gridBagLayout cols="2,50,200,*,100,2"
-                                         rows="2,p,2,100,2,p,2">
-                            <b:cell x="2" y="2">
-                                <b:label id="typ" label="Typ"/>
-                                <b:label id="text" label="Text" rendered="false"/>
-                            </b:cell>
-                            <b:cell x="3" y="2">
-                                <b:combobox labelComponentId="typ" value="#{customerBackingBean.data.newHistoryType}"
-                                            values="#{freelancerBackingBean.data.historyTypes}" nullable="false">
-                                    <f:converter converterId="historyTypeConverter"/>
-                                </b:combobox>
-                            </b:cell>
-                            <b:cell x="2" y="4" width="4">
-                                <b:textarea labelComponentId="text" required="true"
-                                            value="#{customerBackingBean.data.newHistoryEntry}"/>
-                            </b:cell>
-                            <b:cell x="5" y="6">
-                                <b:commandButton sizeToGridBag="true" value="Erfassen"
-                                                 action="#{customerBackingBean.commandAddNewHistoryEntry}">
-                                    <a4j:support eventsQueue="powerstaff" event="onclick"
-                                                 reRender="input,history"/>
-                                </b:commandButton>
-                            </b:cell>
-                        </b:gridBagLayout>
-                    </b:titledBox>
-                </b:cell>
-
-                <b:cell x="1" y="4">
-                    <ui:include src="/include/messages.xhtml"/>
-                </b:cell>
-
-                <b:cell x="1" y="5">
-                    <b:table id="history" cols="20,790" var="row" value="#{customerBackingBean.data.history}">
-                        <h:column>
-                            <f:facet name="header">
-                            </f:facet>
-                            <b:commandLink title="Eintrag löschen" immediate="true"
-                                           action="#{customerBackingBean.commandDeleteHistoryEntry}">
-                                <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
+        <b:gridBagLayout cols="810" rows="10,p,1,p,p" id="menu">
+            <b:cell x="1" y="1">
+                <b:titledBox label="Neuen Eintrag erfassen" id="input">
+                    <b:gridBagLayout cols="2,50,200,*,100,2"
+                                     rows="2,p,2,100,2,p,2">
+                        <b:cell x="2" y="2">
+                            <b:label id="typ" label="Typ"/>
+                            <b:label id="text" label="Text" rendered="false"/>
+                        </b:cell>
+                        <b:cell x="3" y="2">
+                            <b:combobox labelComponentId="typ" value="#{customerBackingBean.data.newHistoryType}"
+                                        values="#{freelancerBackingBean.data.historyTypes}" nullable="false">
+                                <f:converter converterId="historyTypeConverter"/>
+                            </b:combobox>
+                        </b:cell>
+                        <b:cell x="2" y="4" width="4">
+                            <b:textarea labelComponentId="text" required="true"
+                                        value="#{customerBackingBean.data.newHistoryEntry}"/>
+                        </b:cell>
+                        <b:cell x="5" y="6">
+                            <b:commandButton sizeToGridBag="true" value="Erfassen"
+                                             action="#{customerBackingBean.commandAddNewHistoryEntry}">
                                 <a4j:support eventsQueue="powerstaff" event="onclick"
-                                             reRender="history"/>
-                            </b:commandLink>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Historie"/>
-                            </f:facet>
-                            <b:gridBagLayout cols="590,200" rows="p,2,p">
+                                             reRender="input,history"/>
+                            </b:commandButton>
+                        </b:cell>
+                    </b:gridBagLayout>
+                </b:titledBox>
+            </b:cell>
 
-                                <b:cell x="1" y="1">
-                                    <h:outputText value="#{row}">
-                                        <f:converter converterId="creationAuditInformationConverter"/>
-                                    </h:outputText>
-                                </b:cell>
+            <b:cell x="1" y="4">
+                <ui:include src="/include/messages.xhtml"/>
+            </b:cell>
 
-                                <b:cell x="2" y="1">
-                                    <h:outputText value="#{row.type}">
-                                        <f:converter converterId="historyTypeConverter"/>
-                                    </h:outputText>
-                                </b:cell>
+            <b:cell x="1" y="5">
+                <b:table id="history" cols="20,790" var="row" value="#{customerBackingBean.data.history}">
+                    <h:column>
+                        <f:facet name="header">
+                        </f:facet>
+                        <b:commandLink title="Eintrag löschen" immediate="true"
+                                       action="#{customerBackingBean.commandDeleteHistoryEntry}">
+                            <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
+                            <a4j:support eventsQueue="powerstaff" event="onclick"
+                                         reRender="history"/>
+                        </b:commandLink>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Historie"/>
+                        </f:facet>
+                        <b:gridBagLayout cols="590,200" rows="p,2,p">
 
-                                <b:cell x="1" y="3" width="2">
-                                    <h:outputText value="#{row.description}" escape="false">
-                                        <f:converter converterId="textConverter"/>
-                                    </h:outputText>
-                                </b:cell>
+                            <b:cell x="1" y="1">
+                                <h:outputText value="#{row}">
+                                    <f:converter converterId="creationAuditInformationConverter"/>
+                                </h:outputText>
+                            </b:cell>
 
-                            </b:gridBagLayout>
-                        </h:column>
-                    </b:table>
-                </b:cell>
+                            <b:cell x="2" y="1">
+                                <h:outputText value="#{row.type}">
+                                    <f:converter converterId="historyTypeConverter"/>
+                                </h:outputText>
+                            </b:cell>
 
-            </b:gridBagLayout>
-        </f:subview>
+                            <b:cell x="1" y="3" width="2">
+                                <h:outputText value="#{row.description}" escape="false">
+                                    <f:converter converterId="textConverter"/>
+                                </h:outputText>
+                            </b:cell>
+
+                        </b:gridBagLayout>
+                    </h:column>
+                </b:table>
+            </b:cell>
+
+        </b:gridBagLayout>
     </ui:define>
 </ui:composition>	
