--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/customer/customermenu1.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/customer/customermenu1.xhtml
@@ -2,18 +2,19 @@
            xmlns:f="http://java.sun.com/jsf/core"
            xmlns:h="http://java.sun.com/jsf/html"
            xmlns:b="http://mogwai.sourceforge.net/layout"
-           xmlns:a4j="http://richfaces.org/a4j">
+           xmlns:a4j="http://richfaces.org/a4j"
+           xmlns:pretty="http://ocpsoft.com/prettyfaces">
     <b:gridBagLayout rows="p,2,p,2,p" cols="100">
         <b:cell x="1" y="1">
             <h:outputText value="Stammdaten" styleClass="menuitemSelected"/>
         </b:cell>
 
         <b:cell x="1" y="3">
-            <b:commandLink action="#{customerBackingBean.commandHistorie}" immediate="true" styleClass="menuitem">
+            <pretty:link mappingId="customerhistory" styleClass="menuitem"
+                         onclick="if (!checkForChangedData()) {return false;}">
+                <f:param value="#{customerBackingBean.data.currentEntityId}"/>
                 <h:outputText value="Kontakthistorie"/>
-                <a4j:support eventsQueue="powerstaff" event="onclick"
-                             onsubmit="if (!checkForChangedData()) {return false;}"/>
-            </b:commandLink>
+            </pretty:link>
         </b:cell>
 
     </b:gridBagLayout>
