--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/project/projectsearchresult.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/project/projectsearchresult.xhtml
@@ -4,7 +4,13 @@
                 xmlns:b="http://mogwai.sourceforge.net/layout"
                 xmlns:a4j="http://richfaces.org/a4j"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:rich="http://richfaces.org/rich" template="/template/powerstaff.xhtml">
+                xmlns:rich="http://richfaces.org/rich"
+                xmlns:pretty="http://ocpsoft.com/prettyfaces"
+                template="/template/powerstaff.xhtml">
+    <ui:define name="pagetitle">
+        <h:outputText
+                value="Suchergebnisse"/>
+    </ui:define>
     <ui:define name="mainmenu">
         <ui:include src="/include/mainmenu.xhtml"/>
     </ui:define>
@@ -12,100 +18,96 @@
         <ui:include src="/include/project/projectmenu1.xhtml"/>
     </ui:define>
     <ui:define name="content">
-        <b:title title="Projekt - Suchergebnisse"/>
-        <f:subview id="project_searchresult">
-            <b:gridBagLayout id="x" rows="p,10" cols="100,p">
-                <b:cell y="1" x="1">
-                    <h:outputText styleClass="title" value="Projekt Suchergebnisse"/>
-                </b:cell>
+        <b:gridBagLayout id="x" rows="p,10" cols="100,p">
+            <b:cell y="1" x="1">
+                <h:outputText styleClass="title" value="Projekt Suchergebnisse"/>
+            </b:cell>
 
-                <b:cell y="1" x="2">
-                    <a4j:status>
-                        <f:facet name="start">
-                            <img src="${facesContext.externalContext.requestContextPath}/images/rotate2.gif" width="20" height="20"/>
+            <b:cell y="1" x="2">
+                <a4j:status>
+                    <f:facet name="start">
+                        <img src="${facesContext.externalContext.requestContextPath}/images/rotate2.gif" width="20"
+                             height="20"/>
+                    </f:facet>
+                </a4j:status>
+            </b:cell>
+        </b:gridBagLayout>
+
+        <b:gridBagLayout cols="810" rows="30,10,1,p">
+            <b:cell x="1" y="1">
+                <b:titledBox label="Menu">
+                    <b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,right:*"
+                                     rows="20">
+                        <b:cell x="1" y="1">
+                            <pretty:link mappingId="projectmain" title="Zurück">
+                                <f:param value="#{projectBackingBean.data.currentEntityId}"/>
+                                <img src="${facesContext.externalContext.requestContextPath}/images/back.gif"/>
+                            </pretty:link>
+                        </b:cell>
+                    </b:gridBagLayout>
+                </b:titledBox>
+            </b:cell>
+
+            <b:cell x="1" y="3">
+                <ui:include src="/include/messages.xhtml"/>
+            </b:cell>
+
+            <b:cell x="1" y="4">
+                <b:table var="row" value="#{projectBackingBean.data.searchResult}" cols="20,70,80,80,70,230,260">
+                    <h:column>
+                        <f:facet name="header">
                         </f:facet>
-                    </a4j:status>
-                </b:cell>
-            </b:gridBagLayout>
+                        <pretty:link mappingId="projectmain" title="Datensatz anzeigen">
+                            <f:param value="#{row.ID}"/>
+                            <img src="${facesContext.externalContext.requestContextPath}/images/select.gif"/>
+                        </pretty:link>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Nummer"/>
+                        </f:facet>
+                        <h:outputText value="#{row.projectNumber}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Start"/>
+                        </f:facet>
+                        <h:outputText value="#{row.startDate}">
+                            <f:converter converterId="dateConverter"/>
+                        </h:outputText>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Dauer"/>
+                        </f:facet>
+                        <h:outputText value="#{row.duration}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Status"/>
+                        </f:facet>
+                        <h:outputText value="#{projectBackingBean.data.searchResultRowProjectStatus}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Kunde"/>
+                        </f:facet>
+                        <h:outputText value="#{row.customer}" rendered="#{!empty row.customer}">
+                            <f:converter converterId="personConverter"/>
+                        </h:outputText>
+                        <h:outputText value="#{row.partner}" rendered="#{!empty row.partner}">
+                            <f:converter converterId="personConverter"/>
+                        </h:outputText>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Bezeichnung"/>
+                        </f:facet>
+                        <h:outputText value="#{row.descriptionShort}"/>
+                    </h:column>
+                </b:table>
+            </b:cell>
 
-            <b:gridBagLayout cols="810" rows="30,10,1,p">
-                <b:cell x="1" y="1">
-                    <b:titledBox label="Menu">
-                        <b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,right:*"
-                                         rows="20">
-                            <b:cell x="1" y="1">
-                                <b:commandLink action="#{projectBackingBean.commandBack}">
-                                    <img src="${facesContext.externalContext.requestContextPath}/images/back.gif"/>
-                                    <a4j:support eventsQueue="powerstaff" event="onclick"
-                                                 reRender="#{projectBackingBean.data.changedComponents}"/>
-                                </b:commandLink>
-                            </b:cell>
-                        </b:gridBagLayout>
-                    </b:titledBox>
-                </b:cell>
-
-                <b:cell x="1" y="3">
-                    <ui:include src="/include/messages.xhtml"/>
-                </b:cell>
-
-                <b:cell x="1" y="4">
-                    <b:table var="row" value="#{projectBackingBean.data.searchResult}" cols="20,70,80,80,70,230,260">
-                        <h:column>
-                            <f:facet name="header">
-                            </f:facet>
-                            <b:commandLink action="#{projectBackingBean.commandSelectSearchResult}">
-                                <img src="${facesContext.externalContext.requestContextPath}/images/select.gif"/>
-                                <a4j:support eventsQueue="powerstaff" event="onclick"/>
-                            </b:commandLink>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Nummer"/>
-                            </f:facet>
-                            <h:outputText value="#{row.projectNumber}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Start"/>
-                            </f:facet>
-                            <h:outputText value="#{row.startDate}">
-                                <f:converter converterId="dateConverter"/>
-                            </h:outputText>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Dauer"/>
-                            </f:facet>
-                            <h:outputText value="#{row.duration}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Status"/>
-                            </f:facet>
-                            <h:outputText value="#{projectBackingBean.data.searchResultRowProjectStatus}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Kunde"/>
-                            </f:facet>
-                            <h:outputText value="#{row.customer}" rendered="#{!empty row.customer}">
-                                <f:converter converterId="personConverter"/>
-                            </h:outputText>
-                            <h:outputText value="#{row.partner}" rendered="#{!empty row.partner}">
-                                <f:converter converterId="personConverter"/>
-                            </h:outputText>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Bezeichnung"/>
-                            </f:facet>
-                            <h:outputText value="#{row.descriptionShort}"/>
-                        </h:column>
-                    </b:table>
-                </b:cell>
-
-            </b:gridBagLayout>
-
-        </f:subview>
+        </b:gridBagLayout>
     </ui:define>
 </ui:composition>	
